tests/ui/consts/const-try-feature-gate.stderr
error[E0015]: `?` is not allowed on `Option<()>` in constant functions
  --> $DIR/const-try-feature-gate.rs:4:5
   |
LL |     Some(())?;
   |     ^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: `?` is not allowed on `Option<()>` in constant functions
  --> $DIR/const-try-feature-gate.rs:4:5
   |
LL |     Some(())?;
   |     ^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0015`.
